--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get_storage: ^2.1.1
   auto_size_text: ^3.0.0
   flutter_html: ^3.0.0
+  url_launcher: ^6.3.2
 
 
 dev_dependencies:
